<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_two_numbers_to_perform_a_calculation"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_click_on_the_sign_in_the_middle_to_change_the_operator"
            android:textSize="11sp"
            android:textStyle="italic"
            android:textAlignment="center"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="30dp"/>

<!--        TODO: + Icon always stays in the middle-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/firstNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:hint="@string/number"/>
            <TextView
                android:id="@+id/operator"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/plus"
                android:layout_marginHorizontal="10dp"
                android:textSize="25sp"/>
            <EditText
                android:id="@+id/secondNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:hint="@string/number"/>
        </LinearLayout>
        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="40dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>